--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-
-.idea/misc.xml
-dlib_face_recognition_resnet_model_v1.dat
-shape_predictor_68_face_landmarks.dat
-.idea/modules.xml
-.idea/workspace.xml
+*.dat
+*.iml
+*.xml
+*.pyc
+*.txt
+*.jpg
